--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/3a4944e7c5.js" crossorigin="anonymous"></script>
     <title>Bookstore CMS</title>
   </head>
   <body>
